--- a/01-Computation.ipynb
+++ b/01-Computation.ipynb
@@ -8,9 +8,15 @@
     }
    },
    "source": [
-    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>\n",
-    "<br>\n",
-    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n"
+    "<img src=\"./img/logoconvexbrancomini2.png\"  align=\"right\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
+    "<br>\n"
    ]
   },
   {
@@ -36,15 +42,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "### Table of Contents\n",
     "\n",
-    "- 1\n"
+    "<br/><br/> \n",
+    "## Notes:\n",
+    "\n",
+    "* Coded in Python 3.x\n",
+    "* Using [Anaconda](https://www.anaconda.com/) is recommended\n",
+    "* Run the notebook `online` at [binder](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master) [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master)\n",
+    "* [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode\n",
+    "\n",
+    "<kbd>\n",
+    "<img src=\"img/nbviwer-slides.png\" />\n",
+    "</kbd>\n"
    ]
   },
   {
@@ -54,7 +65,25 @@
      "slide_type": "slide"
     }
    },
-   "source": []
+   "source": [
+    "<br> </br>\n",
+    "### Table of Contents\n",
+    "\n",
+    "- What is Computation?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<br></br>\n",
+    "## What is Computation?\n"
+   ]
   }
  ],
  "metadata": {
