--- a/01-Computation.ipynb
+++ b/01-Computation.ipynb
@@ -70,6 +70,9 @@
     "### Table of Contents\n",
     "\n",
     "- What is Computation?\n",
+    "\n",
+    "\n",
+    "- [Installation](#installation)\n",
     "\n"
    ]
   },
@@ -84,6 +87,43 @@
     "#### <br></br>\n",
     "## What is Computation?\n",
     "\n",
+    "\n",
+    "- [Installation](#installation)\n",
+    "- [BBB](#installation)\n",
+    "- [CCCC](#ccc)\n",
+    "- [DDDD](#yy-hio)\n",
+    "    - [TER](#typo3-extension-repository)\n",
+    "    - [Composer](#composer)\n",
+    "- [TYPO3 setup](#typo3-setup)\n",
+    "    - [Extension](#extension)\n",
+    "    - [Database](#database)\n",
+    "- [Page setup](#page-setup)\n",
+    "    - [Upload the page tree file](#upload-the-page-tree-file)\n",
+    "    - [Go to the import view](#go-to-the-import-view)\n",
+    "    - [Import the uploaded page tree file](#import-the-uploaded-page-tree-file)\n",
+    "- [License](#license)\n",
+    "- [Links](#links)\n",
+    "\n",
+    "\n",
+    "### TYPO3 extension repository\n",
+    "\n",
+    "If you want to install Aimeos in\n",
+    "\n",
+    "## Installation\n",
+    "\n",
+    "This document is for the latest Aimeos TYPO3 **18.10 release and later**.\n",
+    "\n",
+    "- Stable release: 19.7 (TYPO3 7/8/9 LTS)\n",
+    "- LTS release: 18.10 (TYPO3 7/8/9 LTS)\n",
+    "\n",
+    "\n",
+    "## CCc\n",
+    "\n",
+    "Th\n",
+    "\n",
+    "## YY hio\n",
+    "\n",
+    "Th\n",
     "\n"
    ]
   },
