--- a/01-Computation.ipynb
+++ b/01-Computation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -13,7 +13,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "<img src=\"./img/logoboxverde.png\" align=\"right\"/>\n",
     "<br>\n"
@@ -42,7 +46,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\n",
     "<br/><br/> \n",
@@ -51,11 +59,20 @@
     "* Coded in Python 3.x\n",
     "* Using [Anaconda](https://www.anaconda.com/) is recommended\n",
     "* Run the notebook `online` at [binder](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master) [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master)\n",
-    "* [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode\n",
-    "\n",
+    "* [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "<kbd>\n",
     "<img src=\"img/nbviwer-slides.png\" />\n",
-    "</kbd>\n"
+    "</kbd>"
    ]
   },
   {
@@ -69,11 +86,7 @@
     "<br> </br>\n",
     "### Table of Contents\n",
     "\n",
-    "- What is Computation?\n",
-    "\n",
-    "\n",
-    "- [Installation](#installation)\n",
-    "\n"
+    "- [What is Computation?](#whatiscomputation)\n"
    ]
   },
   {
@@ -84,46 +97,10 @@
     }
    },
    "source": [
-    "#### <br></br>\n",
+    "<br></br>\n",
+    "<a id='whatiscomputation'></a>\n",
     "## What is Computation?\n",
     "\n",
-    "\n",
-    "- [Installation](#installation)\n",
-    "- [BBB](#installation)\n",
-    "- [CCCC](#ccc)\n",
-    "- [DDDD](#yy-hio)\n",
-    "    - [TER](#typo3-extension-repository)\n",
-    "    - [Composer](#composer)\n",
-    "- [TYPO3 setup](#typo3-setup)\n",
-    "    - [Extension](#extension)\n",
-    "    - [Database](#database)\n",
-    "- [Page setup](#page-setup)\n",
-    "    - [Upload the page tree file](#upload-the-page-tree-file)\n",
-    "    - [Go to the import view](#go-to-the-import-view)\n",
-    "    - [Import the uploaded page tree file](#import-the-uploaded-page-tree-file)\n",
-    "- [License](#license)\n",
-    "- [Links](#links)\n",
-    "\n",
-    "\n",
-    "### TYPO3 extension repository\n",
-    "\n",
-    "If you want to install Aimeos in\n",
-    "\n",
-    "## Installation\n",
-    "\n",
-    "This document is for the latest Aimeos TYPO3 **18.10 release and later**.\n",
-    "\n",
-    "- Stable release: 19.7 (TYPO3 7/8/9 LTS)\n",
-    "- LTS release: 18.10 (TYPO3 7/8/9 LTS)\n",
-    "\n",
-    "\n",
-    "## CCc\n",
-    "\n",
-    "Th\n",
-    "\n",
-    "## YY hio\n",
-    "\n",
-    "Th\n",
     "\n"
    ]
   },
@@ -135,7 +112,26 @@
     "\n",
     "mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python\n",
     "\n",
-    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)"
+    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "exemplos d operacoes de comp\n",
+    "\n",
+    "mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python\n",
+    "\n",
+    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)\n",
+    "\n",
+    "\n",
+    "<img src=\"img/computation1.jpeg\" width=400/>\n"
    ]
   },
   {
@@ -144,7 +140,78 @@
    "source": [
     "ciencia, tecnica tecnologia\n",
     "\n",
-    "qdo comeco a ter uma tecnica na mao e conhecimento de outro em movimento"
+    "qdo comeco a ter uma tecnica na mao e conhecimento de outro em movimento\n",
+    "\n",
+    "<img align=right src=\"img/computation1.jpeg\" width=400/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "<!-- <tr>\n",
+    "    <td><b style=\"font-size:30px\">Title</b></td>\n",
+    "    <td><b style=\"font-size:30px\">Title 2</b></td>\n",
+    " </tr>\n",
+    " -->\n",
+    "    <tr>\n",
+    "    <td>\n",
+    "    <p style=\"font-size:15px\">Lorem ipsum ... exemplos d operacoes de comp mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python</p>\n",
+    "</td>\n",
+    "    <td> \n",
+    "    Lorem ipsm <img src=\"img/computation1.jpeg\" width=400/>\n",
+    "    </td>\n",
+    " </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"img/computation1.jpeg\" align=\"right\"\n",
+    "     title=\"nnononononon\" width=\"220\" height=\"378\">\n",
+    "\n",
+    "Size Limit is a performance budget tool for JavaScript. It checks every commit\n",
+    "on CI, calculates the real cost of your JS for end-users and throws an error\n",
+    "if the cost exceeds the limit.\n",
+    "\n",
+    "* Size Limit calculates **the time** it would take a browser\n",
+    "  to download and **execute** your JS. Time is a much more accurate\n",
+    "  and understandable metric compared to the size in bytes.\n",
+    "* Size Limit calculations include **all dependencies and polyfills**\n",
+    "  used in your JS.\n",
+    "* Add Size Limit to **Travis CI**, **Circle CI**, or another CI system\n",
+    "  to know if a pull request adds a massive dependency.\n",
+    "* Size Limit is **modular** to fit different use cases, like big JS applications\n",
+    "  that use their own bundler or small npm libraries with many files.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember this diagram from school? The water cycle, right?\n",
+    "\n",
+    "<img height=\"350px\" align=\"right\" src=\"img/computation1.jpeg\">\n",
+    "\n",
+    "Two distinct stages, involving water in different phases, being acted upon\n",
+    "by different forces: gravity working one way, evaporation/convection the other.\n",
+    "\n",
+    "To understand re-frame, **imagine data flowing around that loop instead of water**.\n",
+    "\n",
+    "re-frame\n",
+    "provides the conveyance of the data around the loop - the equivalent of gravity, evaporation and convection.\n",
+    "You design what's flowing and then you hang functions off the loop at\n",
+    "various points to compute the data's phase changes (again, data flow coordinates code).\n",
+    "\n",
+    "Sure, right now, you're thinking \"lazy sod - make a proper Computer Science-y diagram\". But, no.\n",
+    "Joe Armstrong says \"don't break the laws of physics\" - I'm sure\n",
+    "you've seen the videos - and if he says to do something, you do it\n",
+    "(unless Rich Hickey disagrees, and says to do something else). So,\n",
+    "this diagram, apart from being a plausible analogy which might help\n",
+    "you to understand re-frame, is **practically proof** it does physics.\n"
    ]
   },
   {
