--- a/01-Computation.ipynb
+++ b/01-Computation.ipynb
@@ -28,7 +28,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
+    },
+    "toc-hr-collapsed": true
    },
    "source": [
     "<!--\n",
@@ -59,20 +60,7 @@
     "* Coded in Python 3.x\n",
     "* Using [Anaconda](https://www.anaconda.com/) is recommended\n",
     "* Run the notebook `online` at [binder](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master) [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/drcinalli/Artificial-Intelligence-and-Transformation/master)\n",
-    "* [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "<kbd>\n",
-    "<img src=\"img/nbviwer-slides.png\" />\n",
-    "</kbd>"
+    "<!-- * [nbviewer](https://nbviewer.jupyter.org/) allows you to switch the notebooks \"slides\" mode-->"
    ]
   },
   {
@@ -86,7 +74,14 @@
     "<br> </br>\n",
     "### Table of Contents\n",
     "\n",
-    "- [What is Computation?](#whatiscomputation)\n"
+    "- [What is a Computer?](#whatisacomputer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -98,159 +93,102 @@
    },
    "source": [
     "<br></br>\n",
-    "<a id='whatiscomputation'></a>\n",
-    "## What is Computation?\n",
+    "<a id='whatisacomput'></a>\n",
+    "## What is a Computer?\n",
     "\n",
-    "\n"
+    "\n",
+    "<img align=right src=\"img/turing.jpg\" width=400/>\n",
+    "\n",
+    ">Box with a Goblin inside\n",
+    "        \n",
+    "<br>  \n",
+    "\n",
+    "Two main properties:\n",
+    "\n",
+    "* performs calculation*\n",
+    "* store results (and remember them)**\n",
+    "        \n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "###### * Summit 150 petaFLOPS (quadrillion floating point operations); i7 200 gigaFLOPS (billion per second) <i>- in 2019</i>\n",
+    "###### ** Cloud storage (exabyte or zettabyte?)  <i>- in 2019</i>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "exemplos d operacoes de comp\n",
-    "\n",
-    "mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python\n",
-    "\n",
-    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "exemplos d operacoes de comp\n",
-    "\n",
-    "mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python\n",
-    "\n",
-    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)\n",
-    "\n",
-    "\n",
-    "<img src=\"img/computation1.jpeg\" width=400/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ciencia, tecnica tecnologia\n",
-    "\n",
-    "qdo comeco a ter uma tecnica na mao e conhecimento de outro em movimento\n",
-    "\n",
-    "<img align=right src=\"img/computation1.jpeg\" width=400/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table>\n",
-    "<!-- <tr>\n",
-    "    <td><b style=\"font-size:30px\">Title</b></td>\n",
-    "    <td><b style=\"font-size:30px\">Title 2</b></td>\n",
-    " </tr>\n",
-    " -->\n",
-    "    <tr>\n",
-    "    <td>\n",
-    "    <p style=\"font-size:15px\">Lorem ipsum ... exemplos d operacoes de comp mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python</p>\n",
-    "</td>\n",
-    "    <td> \n",
-    "    Lorem ipsm <img src=\"img/computation1.jpeg\" width=400/>\n",
-    "    </td>\n",
-    " </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/computation1.jpeg\" align=\"right\"\n",
-    "     title=\"nnononononon\" width=\"220\" height=\"378\">\n",
-    "\n",
-    "Size Limit is a performance budget tool for JavaScript. It checks every commit\n",
-    "on CI, calculates the real cost of your JS for end-users and throws an error\n",
-    "if the cost exceeds the limit.\n",
-    "\n",
-    "* Size Limit calculates **the time** it would take a browser\n",
-    "  to download and **execute** your JS. Time is a much more accurate\n",
-    "  and understandable metric compared to the size in bytes.\n",
-    "* Size Limit calculations include **all dependencies and polyfills**\n",
-    "  used in your JS.\n",
-    "* Add Size Limit to **Travis CI**, **Circle CI**, or another CI system\n",
-    "  to know if a pull request adds a massive dependency.\n",
-    "* Size Limit is **modular** to fit different use cases, like big JS applications\n",
-    "  that use their own bundler or small npm libraries with many files.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Remember this diagram from school? The water cycle, right?\n",
-    "\n",
-    "<img height=\"350px\" align=\"right\" src=\"img/computation1.jpeg\">\n",
-    "\n",
-    "Two distinct stages, involving water in different phases, being acted upon\n",
-    "by different forces: gravity working one way, evaporation/convection the other.\n",
-    "\n",
-    "To understand re-frame, **imagine data flowing around that loop instead of water**.\n",
-    "\n",
-    "re-frame\n",
-    "provides the conveyance of the data around the loop - the equivalent of gravity, evaporation and convection.\n",
-    "You design what's flowing and then you hang functions off the loop at\n",
-    "various points to compute the data's phase changes (again, data flow coordinates code).\n",
-    "\n",
-    "Sure, right now, you're thinking \"lazy sod - make a proper Computer Science-y diagram\". But, no.\n",
-    "Joe Armstrong says \"don't break the laws of physics\" - I'm sure\n",
-    "you've seen the videos - and if he says to do something, you do it\n",
-    "(unless Rich Hickey disagrees, and says to do something else). So,\n",
-    "this diagram, apart from being a plausible analogy which might help\n",
-    "you to understand re-frame, is **practically proof** it does physics.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Computer science\n",
-    "\n",
-    "eh qdo começo a aplicar isso ....\n",
-    "\n",
-    "\n",
-    "exemplos d operacoes de comp\n",
-    "\n",
-    "mostrar o basico funcionando com um onclick, com um store/load... no terminal mesmo ... no python\n",
-    "\n",
-    "(brecha pra falar q nao eh bem assim mais ... veremos na parte de prob complexos e IA)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
    "source": [
     "<br></br>\n",
-    "## o q faco com ele\n",
+    "<a id='Bit'></a>\n",
+    "## Bit\n",
     "\n",
-    "Dados\n",
-    "Dados apresentados de maneiras diferentes \n",
-    "Cálculos rápidos + Sequência de Operações --- aqui onde o bicho pega .... aqui q comeca a fazer uma grande diferenca ... e uma nova diferenca com toda essa transf. digital.\n",
     "\n",
-    "Benefício: \n",
-    "Informação\n",
-    "operacao/execucao de tarefas\n",
-    "Tomada de Decisão \n",
-    "Resolução de Problemas\n",
+    "<img align=right src=\"img/turing.jpg\" width=400/>\n",
     "\n",
+    ">bit\n",
+    "        \n",
+    "<br>  \n",
+    "\n",
+    "Impulso elétrico, operacoes, matematica\n",
+    "\n",
+    "1. Algumas operacoes de exemplo em binário : if, comparacao maior igual vamor x de variavel etc\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "language + examples\n",
+    "\n",
+    "computers only know what you tell them\n",
+    "\n",
+    "1. Maquina q calcula e lembra resultados... ele so faz o q vc fala pra ele\n",
+    "2. Conhecimento declarativp e imperativo... melhorar exemplo e declarativa eh o q se trata o computador \n",
+    "3. Calculadora eh um computador de programa fixo... exemplo - esrly computer - fixed code computer.... o problema eh q eles não eram solving provlems\n",
+    "4. O computador le as receitas(imperativas) and change the game... they act according the recept  - se totnam stored computer!!!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. O q eh um algoritmo: steps control flow stop\n",
+    "2. Internamente essas receitas sao transformadas em binarios e pocotadas em pequeníssima instrucoes como: pega valores, soma, multiplica, armazena e devolve pra memória ..... e nisso os binários são bons.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Rodo um programa  pra sortear um bombom\n",
+    "2. Rodo um de verdade raiz quadrada\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Impacto da Computacao...\n",
+    "4. Impact of computer / diversidade e extensão anywhere/ fins solutions\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Exemplos de appst\n",
+    "\n",
+    "https://youtu.be/JRHAM1nAuD4\n",
     "\n"
    ]
   },
@@ -258,91 +196,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##o Q eu faco com a computacao\n",
+    "1. Areas de ti Academic\n",
+    "2. Areas de TI Professional\n",
     "\n",
-    "informação Bomba (Serviço de Inteligência)\n",
-    "decisão Preço do meu Competidor (Buscapé…)\n",
-    "solução Probabilidade de Chuva (Meteorologia)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "dado \n",
-    "\n",
-    "transformação\n",
-    "cálculos\n",
-    "operações\n",
-    "\n",
-    "informação\n",
-    "operacao\n",
-    "decisão\n",
-    "resolução de\n",
-    "\tproblema\n",
-    "\n",
-    "\n",
-    "o mais usual eh o 1 e 2 ne...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## alguns exemplos melhores\n",
-    "\n",
-    "mais exemplos dos tipos basicos de operacoes usuais\n",
-    "\n",
-    "um com uma operacao .... rapida de mtas coisas\n",
-    "\n",
-    "mais um com uma pequena mudanca na visao do dado - pra moostrar info e me deixar tomar a decisao\n",
-    "\n",
-    "\n",
-    "mais um outro com uma tomada de decisao embutida e automatica\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "outro complexo pra dar tilt\n",
-    "\n",
-    "uns 2 .... pra esse precisamos de outra tecnica menos descritiva. cap de ia"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Areas da Computacao na academia\n",
-    "\n",
-    "img\n",
-    "\n",
-    "descrevo alguma delas...\n",
-    "deixo ate aqui as principais divisoes\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Areas da Computacao no mercado\n",
-    "\n",
-    "img\n",
-    "\n",
-    "descrevo alguma delas...\n",
-    "deixo ate aqui as principais divisoes\n",
-    "\n",
-    "\n",
-    "Highlight nas areas de maior transf...: \n",
-    "\n",
-    "infra - exempllos\n",
-    "Sistemas  - exemplos \n",
-    "\n",
-    "Sistemas com IA - exemplos prob complexos, (focar nesse)\n",
-    "\n",
-    "Data Science  - exemplos prob complexos, "
+    "https://www.youtube.com/watch?v=SzJ46YA_RaA&feature=youtu.be\n"
    ]
   }
  ],
