--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -42,7 +42,7 @@
     "-->\n",
     "__by [Daniel Cinalli](http://www.cinalli.com.br)__ - DSc Artificial Intelligence\n",
     "\n",
-    "## What is Computation?\n"
+    "## What is a Computer?\n"
    ]
   },
   {
@@ -121,18 +121,25 @@
    "source": [
     "<br></br>\n",
     "<a id='Bit'></a>\n",
-    "## Bit\n",
+    "## Binary number system\n",
     "\n",
+    "<img align=right src=\"img/adc.png\"/>\n",
     "\n",
-    "<img align=right src=\"img/turing.jpg\" width=400/>\n",
-    "\n",
-    ">bit\n",
+    "> bit: 0 or 1\n",
     "        \n",
     "<br>  \n",
     "\n",
-    "Impulso elétrico, operacoes, matematica\n",
+    "**Physical limitations:**\n",
+    "* micro transistor on/off\n",
+    "* electric signal \n",
     "\n",
-    "1. Algumas operacoes de exemplo em binário : if, comparacao maior igual vamor x de variavel etc\n"
+    "**Representation of words, numbers, images,...**<br>\n",
+    "B - 01000010 <br>\n",
+    "103 - 01100111<br>\n",
+    "Yellow color - 11111111 11111111 00000000\n",
+    "\n",
+    "**Operations:**<br>\n",
+    "+ | - | == | != | > | < ...\n"
    ]
   },
   {
