--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -74,14 +74,8 @@
     "<br> </br>\n",
     "### Table of Contents\n",
     "\n",
-    "- [What is a Computer?](#whatisacomputer)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
+    "- [What is a Computer?](#whatisacomputer)\n",
+    "<br> <br>\n"
    ]
   },
   {
@@ -92,12 +86,11 @@
     }
    },
    "source": [
-    "<br></br>\n",
     "<a id='whatisacomput'></a>\n",
     "## What is a Computer?\n",
     "\n",
     "\n",
-    "<img align=right src=\"img/turing.jpg\" width=400/>\n",
+    "<img align=right src=\"img/turing.jpg\" width=300/>\n",
     "\n",
     ">Box with a Goblin inside\n",
     "        \n",
@@ -119,11 +112,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br></br>\n",
     "<a id='Bit'></a>\n",
     "## Binary number system\n",
     "\n",
-    "<img align=right src=\"img/adc.png\"/>\n",
+    "<img align=right src=\"img/adc.png\" />\n",
     "\n",
     "> bit: 0 or 1\n",
     "        \n",
@@ -146,14 +138,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "language + examples\n",
+    "<a id='Computer'></a>\n",
+    "## Computer\n",
     "\n",
-    "computers only know what you tell them\n",
+    "<img align=right src=\"img/rubik.png\" width=200/>\n",
     "\n",
-    "1. Maquina q calcula e lembra resultados... ele so faz o q vc fala pra ele\n",
-    "2. Conhecimento declarativp e imperativo... melhorar exemplo e declarativa eh o q se trata o computador \n",
-    "3. Calculadora eh um computador de programa fixo... exemplo - esrly computer - fixed code computer.... o problema eh q eles não eram solving provlems\n",
-    "4. O computador le as receitas(imperativas) and change the game... they act according the recept  - se totnam stored computer!!!\n"
+    "> computers only know what you tell them\n",
+    "        \n",
+    "<br>\n",
+    "\n",
+    "**Calculator:**\n",
+    "* fixed code computer\n",
+    "* low memory\n",
+    "\n",
+    "\n",
+    "**Computer:**\n",
+    "* performs calculation\n",
+    "* store results (and remember them)\n",
+    "* _solve problems through scripts or computer codes_\n",
+    "        \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ComputerKnowledge'></a>\n",
+    "## Computer Knowledge\n",
+    "\n",
+    "<img align=right src=\"img/knowledge.png\" width=300/>\n",
+    "\n",
+    "> Declarative and Imperative knowldges\n",
+    "        \n",
+    "<br>\n",
+    "\n",
+    "**Declarative Knowledge:**\n",
+    "* statement of facts and truth\n",
+    "<br> 2 + 2 = 4\n",
+    "<br> The cat is yellow\n",
+    "<br> Murilo is 12 years old\n",
+    "\n",
+    "It limits the human to find the new things\n",
+    "\n",
+    "**Imperative Knowledge:**\n",
+    "* like a recipe or a cookbook\n",
+    "* sequence of steps/instructions \n",
+    "\n",
+    "It shows how to create information and knowledge\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Algorithms'></a>\n",
+    "## Algorithms\n",
+    "\n",
+    "<img align=right src=\"img/languages.jpg\" width=400/>\n",
+    "\n",
+    "> the algorithms change the game for computers\n",
+    "        \n",
+    "<br>\n",
+    "\n",
+    "O q eh um algoritmo: steps control flow stop\n",
+    "\n",
+    "\n",
+    "Internamente essas receitas sao transformadas em binarios e pocotadas em pequeníssima instrucoes como: pega valores, soma, multiplica, armazena e devolve pra memória ..... e nisso os binários são bons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Languages'></a>\n",
+    "## Languages\n",
+    "\n",
+    "<img align=right src=\"img/languages.jpg\" width=400/>\n",
+    "\n",
+    "> the algorithms change the game for computers\n",
+    "        \n",
+    "<br>\n",
+    "\n",
+    "**Declarative Knowledge:**\n",
+    "* statement of facts and truth\n",
+    "<br> 2 + 2 = 4\n",
+    "<br> The cat is yellow\n",
+    "<br> Murilo is 12 years old\n",
+    "\n",
+    "It limits the human to find the new things\n",
+    "\n",
+    "**Imperative Knowledge:**\n",
+    "* like a recipe or a cookbook\n",
+    "* sequence of steps/instructions \n",
+    "\n",
+    "It shows how to create information and knowledge\n"
    ]
   },
   {
