--- a/template.ipynb
+++ b/template.ipynb
@@ -232,6 +232,37 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>Remember this diagram from school? The water cycle, right?\n",
+    "        Two distinct stages, involving water in different phases, being acted upon\n",
+    "by different forces: gravity working one way, evaporation/convection the other.\n",
+    "\n",
+    "To understand re-frame, **imagine data flowing around that loop instead of water**.\n",
+    "\n",
+    "re-frame\n",
+    "provides the conveyance of the data around the loop - the equivalent of gravity, evaporation and convection.\n",
+    "You design what's flowing and then you hang functions off the loop at\n",
+    "various points to compute the data's phase changes (again, data flow coordinates code).\n",
+    "\n",
+    "Sure, right now, you're thinking \"lazy sod - make a proper Computer Science-y diagram\". But, no.\n",
+    "Joe Armstrong says \"don't break the laws of physics\" - I'm sure\n",
+    "you've seen the videos - and if he says to do something, you do it\n",
+    "(unless Rich Hickey disagrees, and says to do something else). So,\n",
+    "this diagram, apart from being a plausible analogy which might help\n",
+    "you to understand re-frame, is **practically proof** it does physics.\n",
+    "</td>\n",
+    "        <td><img align=\"right\" src=\"img/computation1.jpeg\"  width=3000>\n",
+    "</td></tr>\n",
+    "    </table>\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -363,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
