--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -173,7 +173,8 @@
     "<a id='ComputerKnowledge'></a>\n",
     "## Computer Knowledge\n",
     "\n",
-    "<img align=right src=\"img/knowledge.png\" width=300/>\n",
+    "<!--<img align=right src=\"img/knowledge.png\" width=300/>-->\n",
+    "<img align=right src=\"img/knowledge.gif\" width=450/>\n",
     "\n",
     "> Declarative and Imperative knowldges\n",
     "        \n",
@@ -334,14 +335,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The WINNER is: 11\n"
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-8f91018afd29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwinner\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnum_pessoas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The WINNER is: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwinner\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
      ]
     }
    ],
@@ -358,7 +363,8 @@
     "<a id='code_example_3'></a>\n",
     "## Code Example #2: Search on Files\n",
     "\n",
-    "<img align=right src=\"img/database.jpg\" width=200/>\n",
+    "<!--<img align=right src=\"img/database.jpg\" width=200/>-->\n",
+    "<img align=right src=\"img/database.gif\" width=150/>\n",
     "\n",
     "<br>\n",
     "\n",
@@ -866,17 +872,367 @@
     "<img align=right src=\"img/tape4.gif\" width=300/>\n",
     "\n",
     "<br>\n",
-    "Usually, we do not have to sort billion of billions of data\n",
     "\n",
-    "But sometimes we do... anyway, the example is educational :-)\n",
+    "Back in 70's or 80's, `sorting` a list was painful (forward and rewind the tape)\n",
     "\n",
-    "> Bubble Sort O(nˆ2)\n",
-    "> Quick Sort\n",
-    "> Merge Sort\n",
-    "> Heap sort\n",
-    "> ...\n",
+    "<br>\n",
     "\n",
-    "creative and intelligence apllied to solve problems\n",
+    "Today `sort` is trivial, but still expensive\n",
+    "\n",
+    "\n",
+    "Examples: \n",
+    "\n",
+    "* spreadsheet data\n",
+    "* list of contacts\n",
+    "* compression\n",
+    "* ...\n",
+    "\n",
+    "Anyway, the example is educational :-)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img  align=right src=\"img/sort algorithms.gif\" width=300/>\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "Large list of `sort` algorithms ... creative and intelligence apllied to solve problems\n",
+    "\n",
+    "> Quicksort - $O(n \\log n)$<br>\n",
+    "> Merge sort - $O(n \\log n)$<br>\n",
+    "> Heapsort - $O(n \\log n)$<br>\n",
+    "> Shell sort - $O(n^{3/4})$<br>\n",
+    "> Insertion - $O(n^2)$<br>\n",
+    "> Bubble sort - $O(n^2)$<br>\n",
+    "> ... etc\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "###### (picture) Viktor Bohush - https://github.com/vbohush/SortingAlgorithmAnimations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<br>\n",
+    "\n",
+    "Facebook users: 2,45 Billions <br>\n",
+    "Pretending that 1 comparison = 1 nanosecond\n",
+    "\n",
+    "> Quicksort - 23 Billions nanoseconds<br>\n",
+    "> Bubble Sort - 6 Quintillion nanoseconds<br>\n",
+    "\n",
+    "> Quicksort - 23 seconds<br>\n",
+    "> Bubble Sort - 6 Billions seconds<br> \n",
+    "\n",
+    "\n",
+    "<!-- 1M:11D 1B:32y 6B:190y -->\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>Bubble Sort</td>\n",
+    "        <td></td>\n",
+    "        <td>Quicksort</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td><img  align=right src=\"img/bubblesort.png\" width=300/></td>\n",
+    "        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>\n",
+    "        <td><img  align=right src=\"img/quicksort.png\" width=400/></td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**Bubble Sort**\n",
+    "\n",
+    "\n",
+    "| |||||||||||||||||||\n",
+    "| ------ |||||||||||||||||||\n",
+    "| |29|99|27|41|66|28|44|78|87|19|31|76|58|88|83|97|12|21|44|\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "| ||||||\n",
+    "| ------ ||||||\n",
+    "| |x|y|z|...|n|\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubble_sort(our_list):\n",
+    "\n",
+    "    for i in range(len(our_list)):\n",
+    "        for j in range(len(our_list) - 1):\n",
+    "            if our_list[j] > our_list[j+1]:\n",
+    "                # Swap\n",
+    "                our_list[j], our_list[j+1] = our_list[j+1], our_list[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 19, 21, 27, 28, 29, 31, 41, 44, 44, 58, 66, 76, 78, 83, 87, 88, 97, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [29,99,27,41,66,28,44,78,87,19,31,76,58,88,83,97,12,21,44]\n",
+    "bubble_sort(array)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**Bubble Sort**\n",
+    "\n",
+    "| ||||||\n",
+    "| ------ ||||||\n",
+    "| |x|y|z|...|n|\n",
+    "\n",
+    "n = 1000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 80.21767807006836 seconds ---\n",
+      "--- vector ---\n",
+      "[  0   0   2   3   4   4   7   8   9  12  13  13  15  15  15  19  20  20\n",
+      "  22  22  23  23  29  29  29  29  31  32  33  36  36  36  37  38  39  40\n",
+      "  41  41  42  43  46  46  47  48  48  54  54  55  56  58  59  61  61  62\n",
+      "  62  63  63  64  64  67  69  70  72  72  74  74  74  76  76  77  78  80\n",
+      "  81  81  82  83  83  85  86  86  89  90  91  94  94  94  94  94  95  95\n",
+      "  96  97  98 100 100 101 103 104 104 104 107 107 107 108 109 109 110 110\n",
+      " 112 114 114 114 114 115 116 117 120 121 121 122 126 126 126 132 133 134\n",
+      " 135 135 135 137 137 137 137 139 139 141 143 144 147 147 147 149 149 150\n",
+      " 150 151 153 153 157 159 161 162 162 163 163 164 164 166 168 171 171 171\n",
+      " 171 172 176 176 178 180 182 184 185 185 186 186 188 188 188 189 189 189\n",
+      " 191 191 191 191 192 193 195 197 197 198 198 198 198 199 200 201 202 202\n",
+      " 203]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "vet_size = 10000\n",
+    "vet = np.random.randint(0, vet_size, vet_size)\n",
+    "bubble_sort(vet)\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "#print 200 numbers\n",
+    "print(\"--- vector ---\")\n",
+    "print (vet[0:199])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**QuickSort**\n",
+    "\n",
+    "\n",
+    "| |||||||||||||||||||\n",
+    "| ------ |||||||||||||||||||\n",
+    "| |29|99|27|41|66|28|44|78|87|19|31|76|58|88|83|97|12|21|44|\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def partition(array, start, end):\n",
+    "    pivot = array[start]\n",
+    "    low = start + 1\n",
+    "    high = end\n",
+    "\n",
+    "    while True:\n",
+    "        while low <= high and array[high] >= pivot:\n",
+    "            high = high - 1\n",
+    "\n",
+    "        # Opposite process of the one above\n",
+    "        while low <= high and array[low] <= pivot:\n",
+    "            low = low + 1\n",
+    "\n",
+    "        # We either found a value for both high and low that is out of order\n",
+    "        # or low is higher than high, in which case we exit the loop\n",
+    "        if low <= high:\n",
+    "            array[low], array[high] = array[high], array[low]\n",
+    "            # The loop continues\n",
+    "        else:\n",
+    "            # We exit out of the loop\n",
+    "            break\n",
+    "\n",
+    "    array[start], array[high] = array[high], array[start]\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "def quick_sort(array, start, end):\n",
+    "    if start >= end:\n",
+    "        return\n",
+    "\n",
+    "    p = partition(array, start, end)\n",
+    "    quick_sort(array, start, p-1)\n",
+    "    quick_sort(array, p+1, end)\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 19, 21, 27, 28, 29, 31, 41, 44, 44, 58, 66, 76, 78, 83, 87, 88, 97, 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [29,99,27,41,66,28,44,78,87,19,31,76,58,88,83,97,12,21,44]\n",
+    "\n",
+    "quick_sort(array, 0, len(array) - 1)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**QuickSort**\n",
+    "\n",
+    "| ||||||\n",
+    "| ------ ||||||\n",
+    "| |x|y|z|...|n|\n",
+    "\n",
+    "n = 1000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.21384215354919434 seconds ---\n",
+      "--- vector ---\n",
+      "[  0   0   1   2   2   3   4   5   5   5   8   8   9  11  23  24  24  26\n",
+      "  29  29  30  30  31  31  32  32  33  34  36  37  38  38  38  41  43  43\n",
+      "  44  45  45  46  46  47  47  49  50  50  50  52  52  53  55  56  56  57\n",
+      "  57  57  58  59  60  61  61  61  63  63  63  65  65  65  65  65  66  67\n",
+      "  69  72  73  73  73  74  75  76  76  77  82  84  85  85  87  88  89  89\n",
+      "  89  89  89  92  92  93  94  94  94  94  98  98 103 107 107 108 108 110\n",
+      " 110 111 111 113 114 114 115 115 117 117 119 120 120 121 121 121 121 121\n",
+      " 122 123 124 125 127 128 128 129 131 132 133 135 135 135 136 137 138 138\n",
+      " 138 140 141 142 142 144 145 146 147 148 149 149 150 152 153 155 157 158\n",
+      " 160 161 162 162 164 164 165 165 168 170 172 173 173 176 177 183 185 185\n",
+      " 185 187 188 188 189 189 190 191 193 194 195 196 197 197 198 201 202 204\n",
+      " 204]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "vet_size = 10000\n",
+    "vet = np.random.randint(0, vet_size, vet_size)\n",
+    "quick_sort(vet, 0, len(vet) - 1)\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "#print 200 numbers\n",
+    "print(\"--- vector ---\")\n",
+    "print (vet[0:199])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "**QuickSort vs. Bubble Sort**\n",
+    "<br>\n",
+    "\n",
+    "<!-- [![video](img/udiprod.png)](http://localhost:8888/files/OneDrive/___Po%CC%81s-Doutorado/GitHub/Artificial-Intelligence-and-Transformation/img/Quick%20sort%20vs%20Bubble.mp4?_xsrf=2%7Ccb3c1e7e%7C0cc22a80f11161fe8fe55450ef239732%7C1585309158) -->\n",
+    "\n",
+    "[![video](img/udiprod.png)](https://youtu.be/aXXWXz5rF64?start=106&end=192)\n",
+    "\n",
+    "\n",
+    "######  fonte: https://youtu.be/aXXWXz5rF64?start=106&end=192\n",
     "\n"
    ]
   },
@@ -1055,17 +1411,23 @@
    "source": [
     "\n",
     "\n",
-    "5. Sorts\n",
-    "old thru fita\n",
-    "today is fast (excel 22k itens)... but it works as education for us.\n",
-    "\n",
     "3. Outro de simplex pra resolver equacoes \n",
     "\n",
     "4. em geral com isso fazemos tudo (QUASE TUDO)... gta, face, whataspp, banco\n",
     "Mas nem tudo\n",
     "(agora link com TI)\n",
     "\n",
-    "(depois de uma IA geral ... transformacao digital e depois volto pro detalhe da IA)\n"
+    "(depois de uma IA geral ... transformacao digital e depois volto pro detalhe da IA)\n",
+    "\n",
+    "volto pra combinacao explosiva do xadrez\n",
+    "e depois pro caxeiro e vejo q nao dá......\n",
+    "mostro um: é gato ou não é? - nao ia dar tbem\n",
+    "\n",
+    "intro meta heuris e rede neural\n",
+    "1 evolucio\n",
+    "1 neural\n",
+    "\n",
+    "volto pro problema e rodo\n"
    ]
   },
   {
