--- a/template.ipynb
+++ b/template.ipynb
@@ -375,6 +375,19 @@
     "\n",
     "Data Science  - exemplos prob complexos, "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "    <tr>\n",
+    "        <td></td>\n",
+    "        <td></td>\n",
+    "    </tr>\n",
+    "    </table>\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
