--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -1413,6 +1413,8 @@
     "\n",
     "3. Outro de simplex pra resolver equacoes \n",
     "\n",
+    "4. shortest - dijkistra - (ou investimento ou mochila)\n",
+    "\n",
     "4. em geral com isso fazemos tudo (QUASE TUDO)... gta, face, whataspp, banco\n",
     "Mas nem tudo\n",
     "(agora link com TI)\n",
