--- a/01-Computer.ipynb
+++ b/01-Computer.ipynb
@@ -77,7 +77,9 @@
     "- [What is a Computer?](#whatisacomputer)\n",
     "- [Computer Knowledge](#ComputerKnowledge)\n",
     "- [Algorithms](#Algorithms)\n",
-    "- [Code Examples](#code_example_1)\n",
+    "- [Code Examples and Problems](#code_examples)\n",
+    "- [Complex Problems](#complex_problems)\n",
+    "\n",
     "\n",
     "<br> <br>\n"
    ]
@@ -252,6 +254,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='code_examples'></a>\n",
+    "<br> </br>\n",
+    "### Code Examples and Problems\n",
+    "\n",
+    "- [draw lots](#code_example_1)\n",
+    "- [search on files](#code_example_2)\n",
+    "- [sort](#code_example_3)\n",
+    "- [square root](#code_example_4)\n",
+    "- [linear systems](#code_example_5)\n",
+    "\n",
+    "<br> <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='code_example_1'></a>\n",
     "## Code Example #1: draw lots\n",
     "\n",
@@ -360,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='code_example_3'></a>\n",
+    "<a id='code_example_2'></a>\n",
     "## Code Example #2: Search on Files\n",
     "\n",
     "<!--<img align=right src=\"img/database.jpg\" width=200/>-->\n",
@@ -1749,13 +1768,13 @@
     "$$\n",
     "\n",
     "\n",
-    "#a +  b - 2c +  d + 3e -  f  =    4 <br>\n",
+    "<!-- #a +  b - 2c +  d + 3e -  f  =    4 <br>\n",
     "#2a -  b +  c + 2d +  e - 3f  =   20 <br>\n",
     "#a + 3b - 3c -  d + 2e +  f  =  -15 <br>\n",
     "#5a + 2b -  c -  d + 2e +  f  =  - 3 <br>\n",
     "#-3a -  b + 2c + 3d +  e + 3f  =   16 <br>\n",
     "#4a + 3b +  c - 6d - 3e - 2f  =  -27 <br>\n",
-    "    \n",
+    "-->    \n",
     "    "
    ]
   },
@@ -1880,9 +1899,31 @@
     "\n",
     "<br>\n",
     "\n",
-    "######  *thounsands of equations? ... consider iterative methods\n",
+    "######  *thousands of equations? ... consider iterative methods $O(n^3)$, sometimes $O(n^2)$\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='complex_problems'></a>\n",
+    "<br> </br>\n",
+    "\n",
+    "BUT can we solve any problem with computation?\n",
+    "\n",
+    "### Complex Problems\n",
+    "\n",
+    "- [chess](#code_chess)\n",
+    "- [knapsack](#code_knapsack)\n",
+    "- [travel salesman](#code_tsp)\n",
+    "- [image recognition](#vision)\n",
+    "- [natural language](#pln)\n",
+    "- [pattern recognition](#pattern)\n",
+    "\n",
+    "\n",
+    "<br> <br>\n"
    ]
   },
   {
@@ -1896,19 +1937,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " mochila\n",
-    " caminho minimo\n",
-    " caixeiro\n",
+    "<a id='code_knapsack'></a>\n",
+    "## Knapsack Problem\n",
+    "\n",
+    "<img align=right src=\"img/linear_equation2.gif\" width=300/>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "> Combinatorial optimization - (explosao exponential risk)\n",
+    ">... similar to ....\n",
+    "\n",
+    "Knapsack problems appear in real-world decision-making processes in a wide variety of fields, such as finding the least wasteful way to cut raw materials,[4] selection of investments and portfolios,[5] selection of assets for asset-backed securitization,[6] and generating keys for the Merkle–Hellman[7] and other knapsack cryptosystems.\n",
+    "\n",
+    "carga, alocacao de recursos --- investimento ou projeto, maquinas usar pra fabrivcar com um custo envolvido e producao.\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the total value is as large as possible.\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "formalization\n",
+    "\n",
+    "algs to solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "easy one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complex one that takes too time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show graph\n",
+    "\n",
+    "show time\n",
+    "\n",
+    "tem q ter outro jeito de resolver isso gente!!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " \n",
-    "4. shortest - dijkistra - (ou investimento ou mochila)\n",
-    "\n",
-    "- prg dina?\n",
-    "- pgr linear inteira\n",
-    "- ?\n",
-    "\n",
-    "VEJA como com o computador (calculo + storage) conseguimosaplicar metodos de resolucao (uns mais inteligentes que outros... ) os mais bem bolados\n",
-    "resultam em melhor tempo... mais rapido, solucoes melhores... etc.\n",
-    "\n",
     "4. em geral com isso fazemos tudo (QUASE TUDO)... waze, gta, face, whataspp, banco\n",
     "(mostro coisas q a TI pura faz)\n",
     "\n",
@@ -1939,77 +2032,6 @@
     "1 neural\n",
     "\n",
     "volto pro problema e rodo\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "oh oh .... será q dá pra resolver TODOS esses problemas?\n",
-    "link com IA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Impacto da Computacao...\n",
-    "4. Impact of computer / diversidade e extensão anywhere/ fins solutions\n",
-    "- palestra Cristina sobre tendencias da IA."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTEBOOK\n",
-    "Exemplos de appst\n",
-    "\n",
-    "https://youtu.be/JRHAM1nAuD4\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notebook \n",
-    "1. Areas de ti Academic\n",
-    "2. Areas de TI Professional\n",
-    "\n",
-    "https://www.youtube.com/watch?v=SzJ46YA_RaA&feature=youtu.be\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "- alguns exemplos mais interessantes \n",
-    "- video microsoft .net. kkkk\n",
-    "- video startrek\n",
-    "-video de volta pro futuro ...\n",
-    "\n",
-    "\n",
-    "- sera q consigo resolver assim indeterminadamente???\n",
-    "- IA definicao\n",
-    "-- 1 coisa eh projetar a inteligencia, falar o q o computador faz e ser inteligente antes do computador\n",
-    "-- outra coisa eh projetar uma inteligencia e deixar o computador computar (tipo gen alg)\n",
-    "-- outra coisa eh deixar o computador resolver (nao sei se o item 2 se mistura com o 3)\n",
-    "\n",
-    "- quebras de areas\n",
-    "- etica e diversidade da TI\n",
-    "\n",
-    "- entrando na metaheuristica/otimizacao\n",
-    "- Google trends \n",
-    "- slides cadu\n",
-    "\n",
-    "- o q viria ser entao a transformacao digitsl?\n",
-    "\n",
-    "- TI é grantir utilidade e garantia"
    ]
   }
  ],
